<resources>
    <string name="app_name">TwitterCloneApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_button">Login button</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="twitter_logo_image">Twitter Logo Image</string>
    <string name="happy_path">Happy Path</string>
    <string name="sad_path">Sad Path</string>
    <string name="bearer_token">Bearer Token</string>
    <string name="login_error_msg">We had an error to authenticate you. Please review your login information and try again.</string>
    <string name="ok">Ok</string>
    <string name="login_error">Login Error</string>
    <string name="home_menu_title">Home</string>
    <string name="search_menu_title">Search</string>
    <string name="bell_menu_title">Bell</string>
    <string name="message_menu_title">Message</string>
    <string name="log_out_menu_title">Log out</string>
    <string name="twitter_s_logo">Twitter\'s Logo</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>