<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="350dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_error_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_error"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_error_msg_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_error_msg_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/login_error_msg"
        android:textColor="@color/on_primary"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toTopOf="@+id/ok_login_error_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_error_title_textview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_login_error_button"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/twitter_background"
        android:text="@string/ok"
        android:textColor="@color/twitter_on_background"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="italic"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_error_msg_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>